<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsThemeActivity_TextView_ThemeTitle"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/text_size_text"
                        android:tag="tagForDelete"
                        android:textAllCaps="true"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_MainThemeTitle"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_primary"
                            android:textSize="@dimen/text_size_text"
                            android:tag="tagForDelete"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_MainThemeSubtitle"
                            android:gravity="center_vertical"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/text_secondary"
                            android:textSize="@dimen/text_size_text_small"
                            android:tag="tagForDelete"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.80"
                        android:gravity="center">


                        <androidx.cardview.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            app:cardBackgroundColor="#B0BEC5"
                            android:id="@+id/settingsThddemeActivityTextViewColorTheme"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

        </LinearLayout>










        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_AppBarThemeTitle"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_primary"
                            android:textSize="@dimen/text_size_text"
                            android:tag="tagForDelete" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_AppBarThemeSubtitle"
                            android:gravity="center_vertical"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/text_secondary"
                            android:textSize="@dimen/text_size_text_small"
                            android:tag="tagForDelete"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.80"
                        android:gravity="center">

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:id="@+id/settingsThemeActivityTextViewAppBarColor"
                            android:layout_gravity="center"
                            android:background="#212121"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_ColorTabLayoutNonSelectedTextTitle"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_primary"
                            android:textSize="@dimen/text_size_text"
                            android:tag="tagForDelete" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_ColorTabLayoutNonSelectedTextSubtitle"
                            android:gravity="center_vertical"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/text_secondary"
                            android:textSize="@dimen/text_size_text_small"
                            android:tag="tagForDelete"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.80"
                        android:gravity="center">

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:id="@+id/settingsThemeActivityTextViewColorTabNonSelectedText"
                            android:layout_gravity="center"
                            android:background="#212121"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_GraphColorTitle"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_primary"
                            android:textSize="@dimen/text_size_text"
                            android:tag="tagForDelete" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_GraphColorSubtitle"
                            android:gravity="center_vertical"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/text_secondary"
                            android:textSize="@dimen/text_size_text_small"
                            android:tag="tagForDelete"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.80"
                        android:gravity="center">

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:id="@+id/settingsThemeActivityTextViewColorGraph"
                            android:layout_gravity="center"
                            android:background="#212121"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settingsThemeActivity_TextView_LoginTitle"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/text_size_text"
                        android:tag="tagForDelete"
                        android:textAllCaps="true"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_ColorLoginTitle"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_primary"
                            android:textSize="@dimen/text_size_text"
                            android:tag="tagForDelete" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settingsThemeActivity_TextView_ColorLoginSubtitle"
                            android:gravity="center_vertical"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/text_secondary"
                            android:textSize="@dimen/text_size_text_small"
                            android:tag="tagForDelete"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="0.80"
                        android:gravity="center">

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:id="@+id/settingsThemeActivityTextViewColorLogin"
                            android:layout_gravity="center"
                            android:background="#212121"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />






    </LinearLayout>

</LinearLayout>